tests/ir/validation/expected/undeclared_variable.txt
semantic error: необъявленный идентификатор - идентификатор 'x' не объявлен
  --> tests/ir/validation/undeclared_variable.src:2:5
2      x = 10;
       ^
   = идентификатор: 'x'
   = подсказка: проверьте, объявлена ли переменная 'x' в текущей области видимости

semantic error: несоответствие типов - несоответствие типов в присваивании
  --> tests/ir/validation/undeclared_variable.src:2:5
2      x = 10;
       ^
   = подсказка: проверьте типы операндов

semantic error: необъявленный идентификатор - идентификатор 'x' не объявлен
  --> tests/ir/validation/undeclared_variable.src:3:12
3      return x;
              ^
   = идентификатор: 'x'
   = подсказка: проверьте, объявлена ли переменная 'x' в текущей области видимости

